maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:9: error: an expression of type Null is ineligible for implicit conversion
        sommeAngle = KeepHandOnSideWall(sommeAngle)
                                        ^Escaper:9: error: type mismatch;
 found   : Null
 required: Int
        sommeAngle = KeepHandOnSideWall(sommeAngle)
                                        ^